Fix timepicker z-index

--- a/timepicker.css
+++ b/timepicker.css
@@ -11,6 +11,7 @@
     max-width: 250px;
     margin-right: auto;
     margin-left: auto;
+	z-index: 9999;
 	
 	&:before{
 		content: "";
